--- a/ProjectSourceCode/.env
+++ b/ProjectSourceCode/.env
@@ -2,7 +2,7 @@
 SESSION_SECRET="super duper secret!"
 API_KEY="UoIy50GndUrbrXZ7H28W70YckbBITD3j"
 
-POSTGRES_USER="username"
+POSTGRES_USER="postgres"
 POSTGRES_PASSWORD="password"
 POSTGRES_DB="Madom"
 POSTGRES_HOST_AUTH_METHOD="trust"
