fixed a test case

--- a/ProjectSourceCode/.env
+++ b/ProjectSourceCode/.env
@@ -5,7 +5,7 @@ API_KEY="UoIy50GndUrbrXZ7H28W70YckbBITD3j"
 POSTGRES_USER="username"
 POSTGRES_PASSWORD="password"
 POSTGRES_DB="Madom"
-POSTGRES_HOST="dpg-cqggqstds78s73cf39m0-a"
+POSTGRES_HOST="db"
 POSTGRES_HOST_AUTH_METHOD="trust"
 NODE_ENV="development"
 
